# Save_It

./: .gitignore  README.md  Save_It.py  __init__.py  desktop.ini  favorite_folders.json  pyproject.toml  save_it.js
js/: save_it.js
