[project]
name = "Save_It"
description = "Custom Node To Display, Optionally Compare, and Save Images to Pre-Saved Favorite Locations"
version = "1.4.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/ialhabbal/Save_It"

[tool.comfy]
PublisherId = "ialhabbal"
DisplayName = "Save_It"
Icon = "https://raw.githubusercontent.com/ialhabbal/Save_It/main/save_it.png"
includes = []
